enable spliceTo